# logreader

./: .gitignore  CMakeLists.txt  README.md
include/view/: Application.hpp  ApplicationFactory.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  application.cpp  logreader.cpp
src/controller/: Controller.cpp  Controller.hpp
src/controllers/: ApplicationController.cpp  ApplicationController.hpp  BookmarkController.cpp  BookmarkController.hpp  FunctionsController.cpp  FunctionsController.hpp  TabController.cpp  TabController.hpp
src/functions/: ActivateBookmark.cpp  ActivateBookmark.hpp  AddBookmark.cpp  AddBookmark.hpp  BufferCreator.hpp  Find.cpp  Find.hpp  GetSelection.cpp  GetSelection.hpp  Grep.cpp  Grep.hpp  LogInserter.cpp  LogInserter.hpp  Mark.cpp  Mark.hpp  Match.cpp  Match.hpp  NameCreator.cpp  NameCreator.hpp  Open.cpp  Open.hpp  OpenSingle.cpp  OpenSingle.hpp  Operation.hpp
src/logic/: Controller.cpp  Controller.hpp
src/model/: Bookmark.cpp  Bookmark.hpp  BookmarkColumns.cpp  BookmarkColumns.hpp  BookmarkList.cpp  BookmarkList.hpp  Log.cpp  Log.hpp  LogList.cpp  LogList.hpp
src/view/: AboutDialog.cpp  AboutDialog.hpp  BaseTab.cpp  BaseTab.hpp  BookmarkDialog.cpp  BookmarkDialog.hpp  BookmarkView.cpp  BookmarkView.hpp  CMakeLists.txt  FileChooser.cpp  FileChooser.hpp  FileView.cpp  FileView.hpp  FindDialog.cpp  FindDialog.hpp  GrepDialog.cpp  GrepDialog.hpp  LogContainer.cpp  LogContainer.hpp  LogView.cpp  LogView.hpp  MainWindow.cpp  MainWindow.hpp  MarkDialog.cpp  MarkDialog.hpp  MenuBuilder.cpp  MenuBuilder.hpp  TabLabel.cpp  TabLabel.hpp
src/view/include/: ApplicationImpl.hpp  MainContainer.hpp  MainWindow.hpp
src/view/src/: ApplicationFactory.cpp  ApplicationImpl.cpp  MainContainer.cpp  MainWindow.cpp
